--- a/README
+++ b/README
@@ -3,15 +3,18 @@
 This is a fork of https://github.com/captainjack64/hacktv with some minor changes
 to focus on Windows portability. These changes have been added via conditional
 statements, so nothing I've added should impact on the ability to compile this on
-non-Windows systems. Fedora 32 required.
+non-Windows systems.
 
-Pre-requisite commands:
+Pre-requisite commands for Fedora 32, not supported in 33 or later:
 dnf -y install https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm
 dnf -y install https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm
 dnf -y install ffmpeg
 dnf -y install ffmpeg-devel
 dnf -y install git make libtool mingw64-gcc mingw64-gcc-c++ mingw64-winpthreads-static mingw64-pkg-config cmake yasm nasm
-dnf -y install hackrf-devel osmo-fl2k-devel SoapySDR-devel ffmpeg-devel
+dnf -y install hackrf-devel osmo-fl2k-devel SoapySDR-devel ffmpeg-devel patch
+
+Pre-requisite command for Ubuntu 21.04:
+apt install gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 mingw-w64-tools git make libtool cmake yasm nasm patch dpkg-dev
 
 Compile using ./build_win64.sh
 
